--- a/frontend/src/Styles/contactUsComp.css
+++ b/frontend/src/Styles/contactUsComp.css
@@ -1,23 +1,35 @@
-.contactUs{
-  width: 100%;
-  display: grid;
-  grid-template-columns: 1fr 1fr;
-  padding: 3rem;
+@media screen and (max-width: 870px) {
+  .inpts {
+    width: 35vw;
+    height: 5vw;
+  }
+  .inpts3 {
+    width: 72vw;
+    height: 5vw;
+  }
 }
-.contactUs h3{
-  font-size: 1rem;
-  color: rgba(0, 0, 0, 0.461);
-  text-align: center;
+@media screen and (max-width: 640px) {
+  .inpts {
+    width: 100%;
+    height: 5vw;
+  }
+  .inpts3 {
+    width: 72vw;
+    height: 5vw;
+  }
 }
-.leftContactUs{
-  display: flex;
-  gap: 2rem;
-  justify-content: center;
-  align-items: flex-start;
-  flex-direction: column;
+@media screen and (max-width: 420px) {
+  .inpts {
+    width: 100%;
+    height: 8vw;
+  }
+  .inpts3 {
+    width: 72vw;
+    height: 8vw;
+  }
 }
+.contactContainer {
+  min-height: 100vh;
+  /* background-image: linear-gradient(to bottom, #d9ecff, #ffffff); */
 
-.btnsContainer{
-  display: flex;
-  gap: 2rem;
 }
